# irigger

./: CMakeLists.txt  README.md
resources/puppets/cartoon/: head.mtl
src/: main.cpp
src/input_pipeline/: CMakeLists.txt
src/input_pipeline/analyzers/: feature_detector.cpp  feature_detector.h
src/render/: CMakeLists.txt  render.h
src/render/model/: mesh.h
